# cs76-chess-tournament

./: .cproject  .project  CMakeCache.txt  CMakeLists.txt  KennyYashAI.py  README.md  all_inline.cpp  buildscript.py  thc2.cpp  thc2.h
cmakebuild/: CMakeCache.txt
libraries/includes/chess/: thc.cpp  thc.h
src/: Chess AI.cpp  ChessAI.cpp
